This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Possible assertion failure due to _check_for_legacy_statements()
Type: crash Stage: resolved
Components: Interpreter Core Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-10-09 02:23 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9764 merged ZackerySpytz, 2018-10-09 02:25
Messages (3)
msg327379 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-10-09 02:23
The PyUnicode_Tailmatch() and PyUnicode_FromString() calls in _check_for_legacy_statements() are not properly checked for failure.
msg327569 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-12 08:21
New changeset a4b48f194a131bad6fe1fcfb1f90ae2029304735 by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-34940: Fix the error handling in _check_for_legacy_statements(). (GH-9764)
https://github.com/python/cpython/commit/a4b48f194a131bad6fe1fcfb1f90ae2029304735
msg327570 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-12 08:23
Seems failure is not possible here, but it is safer to always check for errors.
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 79121
2018-10-12 08:23:51serhiy.storchakasetstatus: open -> closed
versions: - Python 3.6, Python 3.7
messages: + msg327570

resolution: fixed
stage: patch review -> resolved
2018-10-12 08:21:12serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg327569
2018-10-09 02:25:27ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request9151
2018-10-09 02:23:39ZackerySpytzcreate