bpo-34940: Fix the error handling in _check_for_legacy_statements()