Objects/exceptions.c
@@ -2929,9 +2929,12 @@ _check_for_legacy_statements(PySyntaxErrorObject *self, Py_ssize_t start)
             return -1;
         }
     }
-    if (PyUnicode_Tailmatch(self->text, print_prefix,
-                            start, text_len, -1)) {
-
+    Py_ssize_t match = PyUnicode_Tailmatch(self->text, print_prefix,
+                                           start, text_len, -1);
+    if (match == -1) {
+        return -1;
+    }
+    if (match == 1) {
         return _set_legacy_print_statement_msg(self, start);
     }
 
@@ -2942,10 +2945,16 @@ _check_for_legacy_statements(PySyntaxErrorObject *self, Py_ssize_t start)
             return -1;
         }
     }
-    if (PyUnicode_Tailmatch(self->text, exec_prefix,
-                            start, text_len, -1)) {
+    match = PyUnicode_Tailmatch(self->text, exec_prefix, start, text_len, -1);
+    if (match == -1) {
+        return -1;
+    }
+    if (match == 1) {
         Py_XSETREF(self->msg,
                   PyUnicode_FromString("Missing parentheses in call to 'exec'"));
+        if (self->msg == NULL) {
+            return -1;
+        }
         return 1;
     }
     /* Fall back to the default error message */
